feat: added auth implementation - register, login and refresh
