# src/main/resources/openapi/api-alchemy.yaml
@@ -22,8 +22,12 @@ paths:
             schema:
               $ref: '#/components/schemas/AccountRequest'
       responses:
-        '201':
+        '200':
           description: Account succesfully created.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TokenResponse'
         '400':
           description: Invalid Request
           content:
@@ -101,7 +105,6 @@ paths:
 
 components:
   schemas:
-  
     AccountRequest:
       type: object
       required:
